# nerdtalk

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  client.sh  commitlint.config.js  gen_cert.sh  gencert.sh  gencert2.sh  gencert3.sh  local_client.sh  local_testing_client.sh  reading_list.md  release-please-config.json  rustfmt.toml  server.sh
.cargo/: config.toml
.github/: labeler.yaml
.github/workflows/: ci.yaml  clippy.yaml  labeler.yaml  pr.yaml  release.yaml
app/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app/src/: App.tsx  global.css  main.tsx
app/src-tauri/: Cargo.toml
app/src/components/: InputBox.tsx  MessageLog.tsx  MessageLogDisplay.tsx  TextBox.css  TextBox.tsx
app/src/state/: authorStore.ts  messageLogStore.ts
cert/: cert.der  cert.pem  identity.p12  key.csr  key.pem  root-ca.der  root-ca.key.pem  root-ca.pem  root-ca.srl  rootCA.crt  rootCA.key  rootCA.srl  server.key.pem
chat/: Cargo.toml
chat/src/: lib.rs
client/: Cargo.toml
client-connect/: Cargo.toml
client-connect/examples/: simple_client.rs
client-connect/src/: lib.rs
client-tauri/: TODO.md  package.json  pnpm-lock.yaml  tailwind.config.js
client-tauri/src/: App.tsx  global.css
client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-tauri/src-tauri/src/: lib.rs
client-tauri/src/components/: InputBox.tsx  MessageLogDisplay.tsx  PrimaryChatDisplay.tsx  TextBox.tsx
client-tauri/src/state/: authorStore.ts  messageLogStore.ts
client-tauri/src/ws/: ws.ts
client-tui/: Cargo.toml
client-tui/src/: app.rs  lib.rs  main.rs  vim.rs
client/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
comms/: Cargo.toml
comms/src/: lib.rs
docs/: protocol-v0.md  vim.md
message/: Cargo.toml
message/src/: lib.rs
scripts/: local_server.sh
server/: Cargo.toml
server/src/: main.rs
xtasks/xtask-lint/: Cargo.toml
xtasks/xtask-lint/src/: lints.rs  main.rs
xtasks/xtask-lint/src/lints/: abbreviated.rs
