[workspace]
members = ["client", "common", "server"]
resolver = "2"

[workspace.package]
version = "0.0.0"
description = "A chat client and server for nerdserver"
authors = ["Ethan Uppal"]
rust-version = "1.79"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.41.1", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
] }
tokio-tungstenite = { version = "0.24.0", features = [
    "rustls-tls-native-roots",
] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"

# I hate this. Why can't tungstenite reexport this? Definitely going to cause
# version pains later.
tokio-rustls = "0.26.0"
webpki-roots = "0.26.7"
