[workspace]
members = [
    "client-tauri/src-tauri",
    "chat",
    "client-connect",
    "client-tui",
    "comms",
    "server",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
description = "A chat client and server for nerdserver"
authors = ["Ethan Uppal, Haadi Khan, Jeffrey Huang"]
rust-version = "1.79"
edition = "2021"

[workspace.dependencies]
client-connect = { path = "client-connect" }
chat = { path = "chat" }
comms = { path = "comms" }

tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "time",
    "sync",
    "io-util",         # literally just for an example
] }
tokio-tungstenite = { version = "0.26.0", features = [
    "rustls-tls-native-roots",
] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
env_logger = "0.11.6"

# I hate this. Why can't tungstenite reexport this? Definitely going to cause
# version pains later.
tokio-rustls = "0.26.1"
webpki-roots = "0.26.7"

rustls-webpki = "0.102.8"

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
bincode = "1.3.3"

syn = "2.0.90"
quote = "1.0.37"

ratatui = "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
copypasta = "0.10.1"
regex = "1.11.1"
insta = "1.41.1"

chrono = { version = "0.4.39", features = ["serde", "clock"] }

tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2.2.2"
tauri-build = { version = "2.0.3", features = [] }
