[workspace]
members = [
    "client-tauri/src-tauri",
    "chat",
    "client-connect",
    "client-tui",
    "comms",
    "server",
    "xtasks/xtask-lint",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
description = "A chat client and server for nerdserver"
authors = ["Ethan Uppal, Haadi Khan, Jeffrey Huang"]
rust-version = "1.80"
edition = "2021"

[workspace.dependencies]
client-connect = { path = "client-connect" }
chat = { path = "chat" }
comms = { path = "comms" }

tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "time",
    "sync",
    "io-util",         # literally just for an example
] }
tokio-tungstenite = { version = "0.26.0", features = [
    "rustls-tls-native-roots",
] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
env_logger = "0.11.6"

# I hate this. Why can't tungstenite reexport this? Definitely going to cause
# version pains later.
tokio-rustls = "0.26.1"
webpki-roots = "0.26.7"

rustls-webpki = "0.102.8"

serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

syn = { version = "2.0.90", features = ["visit", "full"] }
quote = "1.0.37"
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }

ratatui = "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
copypasta = "0.10.1"
regex = "1.11.1"
insta = "1.41.1"

chrono = { version = "0.4.39", features = ["serde", "clock"] }

tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2.2.2"
tauri-build = { version = "2.0.3", features = [] }

cargo = "0.84.0"
annotate-snippets = "0.11.5"
