[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
rustls-webpki.workspace = true
comms.workspace = true
ratatui = "0.29.0"

[features]
local = []
