[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
log.workspace = true
env_logger.workspace = true
tokio-rustls.workspace = true
comms.workspace = true

[features]
local = []
