[package]
name = "nerdtalk"
version.workspace = true
description.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
# The `_lib` suffix is needed for windows compatibility :p
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true
client-connect.workspace = true
comms.workspace = true
