[package]
name = "xtask-lint"
version.workspace = true
description.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
cargo.workspace = true
syn.workspace = true
proc-macro2.workspace = true
annotate-snippets.workspace = true
log.workspace = true
env_logger.workspace = true
